hphp/test/zend/good/tests/classes/static_properties_undeclared_assignInc.php.expectf

Fatal error: Keyword Class must be written in lowercase in %s/static_properties_undeclared_assignInc.php on line 2
